# Tikob

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  LINKEDIN_POST.md  Procfile  README.md  fly.toml  pyproject.toml  replit.md  test_mvp.py
app/: advice_service.py  ai_service.py  app.py  avatar_helper.py  currency_service.py  haitian_culture.py  ledger_models.py  ledger_service.py  models.py  notifications.py  traditions_data.py  utils.py  xp_service.py
app/static/css/: folklore.css  immersive.css  lakou.css  premium.css  style.css
app/templates/: _avatar.html  admin_dashboard.html  badges.html  bank_linking.html  base.html  create_group.html  dashboard.html  financial_survey.html  group_chat.html  group_detail.html  impact_visualizer.html  join_group.html  leaderboard.html  ledger.html  login.html  money_management.html  signup.html  survey_results.html
app/tests/: test_ledger.py
attached_assets/: Pasted--ONE-PAGE-REPLIT-AGENT-INSTRUCTIONS-Build-an-animated-badge-reputation-system-with-a-premium-UI-UX--1764025591145_1764025591145.txt  Pasted--Susu-App-UI-UX-Animation-Instructions-1-Use-immersive-_1765377331444.txt  Pasted-Replit-agent-instructions-for-a-tax-ready-community-savings-app-You-re-building-a-Fintech-grade-led-1764037067717_1764037067718.txt
docs/: BETA_FEATURES.md
tests/: conftest.py  test_admin_approval.py  test_badges.py  test_file_upload.py
