[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-limiter>=4.0.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-talisman>=1.1.0",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "plaid-python>=37.1.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "pytest-flask>=1.3.0",
    "sendgrid>=6.12.5",
    "werkzeug>=3.1.3",
]
